# Edge_Optimizer_V2

./: .gitattributes  .gitignore  Cargo.toml  Edge-Optimizer.md  README.md  build.rs  prompt.md
.github/: copilot-instructions.md  design.md
.github/agents/: Plan.agent.md  Plan2.agent.md  default.agent.md
.github/prompts/: plan-deep.prompt.md
.github/workflows/: buildntest.yml
.mermaid/: Graph.mmd  SequenceDiagram.mmd
References/: crosshair_overlay_Version2.rs
apps/EdgeOptimizer.Settings.Wpf/: App.xaml  App.xaml.cs  EdgeOptimizer.Settings.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
crates/core/: Cargo.toml
crates/core/src/: common_apps.rs  config.rs  crosshair_overlay.rs  engine_ipc.rs  flyout.rs  image_picker.rs  input_recorder.rs  ipc.rs  lib.rs  macro_config.rs  orchestration.rs  process.rs  profile.rs  tray_flyout.rs  tray_icon.rs
crates/core/src/gui/: macro_editor.rs  mod.rs  profile_editor.rs  styles.rs
crates/crosshair/: Cargo.toml  build.rs
crates/crosshair/src/: main.rs
crates/engine_ctl/: Cargo.toml
crates/engine_ctl/src/: main.rs
crates/engine_service/: Cargo.toml  build.rs
crates/engine_service/src/: main.rs
crates/macro/: Cargo.toml  build.rs
crates/macro/src/: executor.rs  hotkey_manager.rs  ipc_handler.rs  main.rs
crates/macro/src/input_hooks/: input_listener.rs  keyboard_hook.rs  mod.rs  mouse_hook.rs
crates/macro/src/input_sender/: keyboard.rs  mod.rs  mouse.rs
crates/macro/src/types/: enums.rs  mod.rs  structs.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: main.rs
crates/settings/: Cargo.toml  build.rs
crates/settings/src/: main.rs
examples/: gen_crosshair.rs
resources/: crosshair.rc  runner.rc  settings.rc
scripts/: check-metadata.ps1  install-engine-service.ps1  register-cleanup-task.ps1  uninstall-engine-service.ps1
src/: common_apps.rs  config.rs  crosshair_overlay.rs  flyout.rs  image_picker.rs  ipc.rs  lib.rs  main.rs  overlay.rs  process.rs  profile.rs  tray_flyout.rs
src/gui/: mod.rs  profile_editor.rs  styles.rs
