[workspace]
members = [
    "crates/core",
    "crates/settings",
    "crates/runner",
    "crates/crosshair",
    "crates/macro",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# GUI & Window Management
iced = { version = "0.12", features = ["debug", "image"] }
tray-icon = "0.14"
winit = "0.29"
softbuffer = "0.4"

# Image & File Handling
image = "0.24"
rfd = "0.14"

# System & Process Management
sysinfo = "0.30"
parking_lot = "0.12"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
open = "5.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Threading & IPC
crossbeam = "0.8"
once_cell = "1.19"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Windows-specific
winresource = "0.1"

[workspace.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
]

[workspace.dependencies.winapi]
version = "0.3"
features = ["shellapi", "shlobj", "combaseapi"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
