[package]
name = "edge_optimizer_core"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }
softbuffer = { workspace = true }
image = { workspace = true }
rfd = { workspace = true }
sysinfo = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
open = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
winapi = { workspace = true }
