[package]
name = "edge_optimizer_crosshair"
version.workspace = true
edition.workspace = true

[[bin]]
name = "EdgeOptimizer_Crosshair"
path = "src/main.rs"

[dependencies]
edge_optimizer_core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
softbuffer = { workspace = true }
image = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
