[package]
name = "edge_optimizer_engine_ctl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "EdgeOptimizer_EngineCtl"
path = "src/main.rs"

[dependencies]
edge_optimizer_core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }