[package]
name = "edge_optimizer_engine_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "EdgeOptimizer_EngineSvc"
path = "src/main.rs"

[dependencies]
edge_optimizer_core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
