[package]
name = "edge_optimizer_macro"
version.workspace = true
edition.workspace = true

[[bin]]
name = "EdgeOptimizer_Macro"
path = "src/main.rs"

[dependencies]
edge_optimizer_core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
once_cell = { workspace = true }

# Global hotkey listening
global-hotkey = "0.6"

# Input simulation
enigo = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
